fixed frontpage posts meta header float and push problem, and word wrap so it doesn't push off page when browsing on mobile device

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -32,6 +32,7 @@ div#content {
 	background-color: $color__page;
 	padding-left: 1rem;
 	padding-right: 1rem;
+	word-wrap: break-word;
 }
 #primary {
 	@include span(12 of 16 no-gutters border-box);
@@ -177,6 +178,11 @@ $bp-largescreen: 880px;
 	li { margin-bottom: 1rem;};
 }
 
+// front page posts
+.home article.post header {
+	@include margin-leader(1);
+	
+}
 
 
 
