--- a/scss/site/primary/_posts-and-pages.scss
+++ b/scss/site/primary/_posts-and-pages.scss
@@ -22,6 +22,11 @@
 	margin: 1.5em 0 0;
 }
 
+// homepage over-ride
+.home .entry-content {
+	margin: 0;
+}
+
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
